# flexui

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  index.js  index.wasm
.github/workflows/: ci.yml  demo.yml  docs.yml
examples/: CMakeLists.txt
examples/cmake_modules/: FindSDL2.cmake
examples/glfw_gl3/: CMakeLists.txt  main.cpp  template.html
examples/sdl_gl3/: CMakeLists.txt  main.cpp
flexui/: Element.cpp  Element.hpp  main.cpp
include/flexui/: Backend.hpp  DefaultResources.hpp  Element.hpp  Log.hpp  Math.hpp  README.md  Structs.hpp  Surface.hpp  TreeProcessor.hpp  TreeScope.hpp
include/flexui/Elements/: Button.hpp  Text.hpp
include/flexui/Events/: EventHandler.hpp  EventTarget.hpp  Events.hpp  EventsController.hpp
include/flexui/Layout/: ElementLayoutObject.hpp  LayoutEngine.hpp  LayoutObject.hpp  LayoutTreeUpdater.hpp  TextLayoutObject.hpp  Yoga.hpp
include/flexui/Misc/: Color.hpp  Parser.hpp  String.hpp
include/flexui/Nodes/: Comment.hpp  ContainerNode.hpp  Document.hpp  Element.hpp  Node.hpp  README.md  Style.hpp  Text.hpp  TreeScope.hpp  XMLParse.hpp
include/flexui/Nodes/Elements/: Button.hpp  Slider.hpp
include/flexui/Providers/: ResourceProvider.hpp  TextureProvider.hpp
include/flexui/Render/: DynamicAtlas.hpp  DynamicAtlasAllocator.hpp  Font.hpp  Painter.hpp  RenderEngine.hpp  TreePainter.hpp
include/flexui/Selectors/: IdentifierIndex.hpp  PseudoStates.hpp  README.md  Selector.hpp  SelectorMatcher.hpp  SelectorParser.hpp
include/flexui/Structure/: XMLParse.hpp
include/flexui/Style/: NamedColors.hpp  README.md  StyleComputed.hpp  StyleDefinitions.hpp  StyleEngine.hpp  StyleParse.hpp  StyleProperty.hpp  StyleRule.hpp  StyleSelectorMatcher.hpp  StyleSheet.hpp  StyleTreeUpdater.hpp
src/flexui/: DefaultResources.cpp  Element.cpp  Log.cpp  Surface.cpp  TreeProcessor.cpp  TreeScope.cpp  Yoga.hpp
src/flexui/Elements/: Button.cpp  Slider.cpp  Text.cpp
src/flexui/Events/: Events.cpp  EventsController.cpp
src/flexui/Layout/: ElementLayoutObject.cpp  LayoutEngine.cpp  LayoutObject.cpp  LayoutTreeUpdater.cpp  TextLayoutObject.cpp
src/flexui/Misc/: String.cpp
src/flexui/Nodes/: Comment.cpp  ContainerNode.cpp  Document.cpp  Element.cpp  Node.cpp  Style.cpp  Text.cpp  XMLParse.cpp
src/flexui/Nodes/Elements/: Button.cpp  Slider.cpp
src/flexui/Providers/: ResourceProvider.cpp
src/flexui/Render/: DynamicAtlas.cpp  DynamicAtlasAllocator.cpp  Font.cpp  Painter.cpp  RenderEngine.cpp  TreePainter.cpp
src/flexui/Selectors/: Selector.cpp  SelectorMatcher.cpp  SelectorParser.cpp
src/flexui/Structure/: XMLParse.cpp
src/flexui/Style/: NamedColors.hpp  StyleComputed.cpp  StyleDefinitions.cpp  StyleEngine.cpp  StyleParse.cpp  StyleProperty.cpp  StyleRule.cpp  StyleSelectorMatcher.cpp  StyleSheet.cpp  StyleTreeUpdater.cpp
