cmake_minimum_required(VERSION 2.8)

add_executable(sdl_gl3 main.cpp)
target_link_libraries(sdl_gl3 flexui)

if(EMSCRIPTEN)
	target_link_libraries(sdl_gl3 "-s WASM=1")
	target_link_libraries(sdl_gl3 "-s DEMANGLE_SUPPORT=1")
	target_link_libraries(sdl_gl3 "-s USE_SDL=2")
	target_link_libraries(sdl_gl3 "-s FULL_ES3=1")
	target_link_libraries(sdl_gl3 "-o index.html")
else()
	target_include_directories(sdl_gl3 PUBLIC ${SDL2_INCLUDE_DIR})
	target_link_libraries(sdl_gl3 ${SDL2_LIBRARY} ${OPENGL_LIBRARIES} libglew_static)
endif()
